# octowatch-videoservice

./: README.md  compile.sh  meson.build  start.sh
src/cpp/: Camera.cpp  CameraCapabilities.cpp  CameraControl.cpp  CpuJpegEncoder.cpp  DmaHeap.cpp  H264Encoder.cpp  H264Stream.cpp  HardwareJpegEncoder.cpp  JpegEncoder.cpp  Logging.cpp  Main.cpp  MultipartJpegHttpStream.cpp  RemoteControl.cpp  SingleThreadedExecutor.cpp  StringUtils.cpp  SystemTemperature.cpp
src/cpp/network/: Connection.cpp  TcpConnection.cpp  TcpServer.cpp
src/h/: Camera.h  CameraCapabilities.h  CameraControl.h  CpuJpegEncoder.h  DmaHeap.h  H264Encoder.h  H264Stream.h  HardwareJpegEncoder.h  JpegEncoder.h  Logging.h  MultipartJpegHttpStream.h  RemoteControl.h  SingleThreadedExecutor.h  StringUtils.h  SystemTemperature.h  TcpServer.h
